--- a/grafana/provisioning/datasources/datasource.yaml
+++ b/grafana/provisioning/datasources/datasource.yaml
@@ -5,15 +5,14 @@ datasources:
     uid: iot-postgres
     type: postgres
     access: proxy
-    url: iot-rds-iotrds-yxpyvnrvhixy.catqw48y8uxg.us-east-1.rds.amazonaws.com:5432
+    url: ${POSTGRES_ENDPOINT}:5432
     database: iotrds
     user: iotadmin
     isDefault: true
     editable: true
-    orgId: 1
 
     jsonData:
       sslmode: require
 
     secureJsonData:
-      password: SuperPasswordSeguro123!
+      password: ${POSTGRES_PASSWORD}
