--- a/grafana/provisioning/alerting/contactpoints.yml
+++ b/grafana/provisioning/alerting/contactpoints.yml
@@ -7,5 +7,5 @@ contactPoints:
       - uid: sns-server-room
         type: sns
         settings:
-          topic_arn: arn:aws:sns:us-east-1:<AWS_ID_ACCOUNT>:grafana-sns
+          topic_arn: arn:aws:sns:us-east-1:<ID_AWS_ACCOUNT>:grafana-sns
         disableResolveMessage: false
